Add historical entries

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     
-3/22/19
+3-22-19
 
 As the tree hit her from behind
 she didn't have time to react
@@ -53,6 +53,56 @@ Form should never come at the expense of function. The two can coexist, but ever
 "Well, it's not blue, so by my calculation that makes it green."
 "Why wouldn't the binary pair then just be blue and not blue?"
 "You can't just go around life creating your binary pairs based on negation. Something can't be defined by absence, it needs to be given identity."
+
+12-12-18
+
+The turtle woke with a start. She had been dozing at the edge of the pond all afternoon, enjoying the warmth of the summer sun on her wrinkled head. She woke for no apparent reason, other than her turtle sense telling her that it was time to move. She did not give much thought to this sense and trusted it completely. Wading into the water she felt powerful, legs extending in a way reminicent of an engine revving up. She travelled by habit to her favorite feeding spot a quarter turn clockwise around the pond. The greens here were plentiful and tasty. She munched on them half at ease, one eye always towards the south end of the pond where the pike lived. Usually the pike did not attack turtles but one can never be too careful.
+
+The pike was not in a good mood. She rarely was. She had only eaten twice that day and was fairly pissed about it. She stayed deep on days like this, when the sun tended to reflect off her scales causing a dreadful disco ball effect. She was the only pike in this pond, a curiosity washed in as a roe from a neighboring pond via the storm drain. It was unlikely for her to exist at all yet there she was. She was unaware of her history but acutely aware of the circumstance. She was not capable of feeling lonely (or so she told herself) but it was pike mating season and she had a certain amount of sexual frustration. As a result, the other residents of the pond seems to be even more scarce than usual. She decided to take a lap around the perimeter, she thought that she felt the water current of a turtle ..
+
+9-16-18
+The man of the west uses all aspects of his environment
+Cactus boots are a resourceful way to keep his feet cool in the brutal sun
+The spines are used to poke out the eyes of his enemies
+Of which there are many in such an unforgiving place
+
+9-5-18
+When the well runs dry you must dig a new one
+Or fill the old one with water again
+Go to Walmart and buy the cheapest water in bulk that you can find
+Pour them all into your well
+Repeat as needed
+
+9-1-18
+The only two possible responses to slavery are to fight or accept it
+When fighting it means death, is the cost too high?
+
+Measurement of love is a complicated process
+It requires a complete brain scan and expert analysis
+Only then can you tell if someone loves you as much as you love them
+
+Faith too can be measured in this way
+It separates the saints from the false prophets
+But even if faith is real, this says nothing about the reality of God himself
+
+8-31-18
+I'm no herbivore, but that plant is not looking too good.
+Yeah you're right, it is looking kind of hungry.
+
+"Listen to your body" "the body wants"
+Look at this hand - is it yours? 
+When you move the fingers
+Straighten the back
+Trace the outline of the nipple
+
+The past and future are imaginary
+Where does this lead you, hedonism or discipline?
+Even hedonists must exercise moderation, drawing a line before death
+In this way both camps are the same
+
+Eat two complementary foods but keep one on each side of mouth
+Focus your mind on chewing and tasting each one 
+This is more efficient than eating it all separately, trust me
 
 8-30-18
 Cats are not trusted
