--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
 <body>
 <pre>
 
+       .
+      ":"
+    ___:____     |"\/"|
+  ,'        `.    \  /
+  |  O        \___/  |
+~^~^~^~^~^~^~^~^~^~^~^~^~
 
+
+
+3-23-19
+
+Man trips on sidewalk
+Plant fails to meet earnings goal
+A cause and effect
     
 3-22-19
 
@@ -53,6 +66,10 @@ Form should never come at the expense of function. The two can coexist, but ever
 "Well, it's not blue, so by my calculation that makes it green."
 "Why wouldn't the binary pair then just be blue and not blue?"
 "You can't just go around life creating your binary pairs based on negation. Something can't be defined by absence, it needs to be given identity."
+
+3-15-19
+
+This dude I met yesterday and his wife sold me some spinach leaves they taste very home grown they live in Elgin it was at the farmer's market but it didn't sound like they have a farm just a garden I say it this way because I talked to the guy first I don't want to discount the role his wife played in the growing of the spinach but she also seemed to defer to him on the spinach pricing so it kind of seemed like it was his deal the spinach itself is not particularly remarkable and I don't comparison shop on spinach so I'm not sure if the price was particularly high but it probably was compared to the grocery store however I like eating it more because I know that it came from a garden in Elgin
 
 12-12-18
 
