--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
   |  O        \___/  |
 ~^~^~^~^~^~^~^~^~^~^~^~^~
 
+3-24-19
 
+Poop out a haiku
+Do the minimum required
+Success is ensured
 
 3-23-19
 
