--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
   |  O        \___/  |
 ~^~^~^~^~^~^~^~^~^~^~^~^~
 
+
+
+3-25-19
+Cracked joints, creaky bones
+Three lashes across the face
+Pain blossoms to life
+
+--
+
 3-24-19
 
 Poop out a haiku
