--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
 
 
+3-26-19
+Happiness is fine
+Unpredictable at best
+Give thanks regardless
+
 3-25-19
 Cracked joints, creaky bones
 Three lashes across the face
