--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
 
 
+3-27-19
+Caught in the moment
+Lead by counterexample
+Value in hindsight
+
 3-26-19
 Happiness is fine
 Unpredictable at best
