--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   |  O        \___/  |
 ~^~^~^~^~^~^~^~^~^~^~^~^~
 
-
+3-28-19
+Late night visitor
+Soft voice, accuse and threaten
+Tact is subjective
 
 3-27-19
 Caught in the moment
