--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
   |  O        \___/  |
 ~^~^~^~^~^~^~^~^~^~^~^~^~
 
+
+4-1-19
+Seas rise, levees break
+Bees dead, water bad, fish gone
+Milkmen must retrain
+
+--
+
+Theme: Gratitude
+
 3-28-19
 Late night visitor
 Soft voice, accuse and threaten
@@ -54,19 +64,16 @@ Pain blossoms to life
 --
 
 3-24-19
-
 Poop out a haiku
 Do the minimum required
 Success is ensured
 
 3-23-19
-
 Man trips on sidewalk
 Plant fails to meet earnings goal
 A cause and effect
     
 3-22-19
-
 As the tree hit her from behind
 she didn't have time to react
 she folded forwards, forced by impact
@@ -94,11 +101,9 @@ Form should never come at the expense of function. The two can coexist, but ever
 "You can't just go around life creating your binary pairs based on negation. Something can't be defined by absence, it needs to be given identity."
 
 3-15-19
-
 This dude I met yesterday and his wife sold me some spinach leaves they taste very home grown they live in Elgin it was at the farmer's market but it didn't sound like they have a farm just a garden I say it this way because I talked to the guy first I don't want to discount the role his wife played in the growing of the spinach but she also seemed to defer to him on the spinach pricing so it kind of seemed like it was his deal the spinach itself is not particularly remarkable and I don't comparison shop on spinach so I'm not sure if the price was particularly high but it probably was compared to the grocery store however I like eating it more because I know that it came from a garden in Elgin
 
 12-12-18
-
 The turtle woke with a start. She had been dozing at the edge of the pond all afternoon, enjoying the warmth of the summer sun on her wrinkled head. She woke for no apparent reason, other than her turtle sense telling her that it was time to move. She did not give much thought to this sense and trusted it completely. Wading into the water she felt powerful, legs extending in a way reminicent of an engine revving up. She travelled by habit to her favorite feeding spot a quarter turn clockwise around the pond. The greens here were plentiful and tasty. She munched on them half at ease, one eye always towards the south end of the pond where the pike lived. Usually the pike did not attack turtles but one can never be too careful.
 
 The pike was not in a good mood. She rarely was. She had only eaten twice that day and was fairly pissed about it. She stayed deep on days like this, when the sun tended to reflect off her scales causing a dreadful disco ball effect. She was the only pike in this pond, a curiosity washed in as a roe from a neighboring pond via the storm drain. It was unlikely for her to exist at all yet there she was. She was unaware of her history but acutely aware of the circumstance. She was not capable of feeling lonely (or so she told herself) but it was pike mating season and she had a certain amount of sexual frustration. As a result, the other residents of the pond seems to be even more scarce than usual. She decided to take a lap around the perimeter, she thought that she felt the water current of a turtle ..
