--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   |  O        \___/  |
 ~^~^~^~^~^~^~^~^~^~^~^~^~
 
+5-14-19
+When you hold a straw
+Everything needs to be slurped
+Confirmation bias
+
 
 4-1-19
 Seas rise, levees break
