--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
   |  O        \___/  |
 ~^~^~^~^~^~^~^~^~^~^~^~^~
 
+6-4-19
+Because I'm overoptimistic
+Because life is nasty, brutish, and short
+Because I'm a grim realist
+Because maybe then it will fit
+Because I feel more than ever
+Because it's beautiful
+Because I don't care what anyone thinks and they'll respect me for it dammit
+Because I don't understand myself
+Because 
+
+
 5-14-19
 When you hold a straw
 Everything needs to be slurped
